# doc/product-swagger.yaml
@@ -119,7 +119,6 @@ definitions:
     - id
     - name
     - price
-    - priceFormatted
     properties:
       id:
         type: "string"
@@ -128,9 +127,6 @@ definitions:
         type: "string"
       price:
         $ref: "#/definitions/Price"
-      priceFormatted:
-        description: human readable version of price
-        type: "string"
   ProductListLinks:
     type: "object"
     required:
